@@ -44,6 +44,7 @@ SSDB* SSDB::open(const Config &conf, const std::string &base_dir){
 	std::string main_db_path = base_dir + "/data";
 	std::string meta_db_path = base_dir + "/meta";
 	size_t cache_size = (size_t)conf.get_num("leveldb.cache_size");
+	int max_open_files = conf.get_num("leveldb.max_open_files");
 	int write_buffer_size = conf.get_num("leveldb.write_buffer_size");
 	int block_size = conf.get_num("leveldb.block_size");
 	int compaction_speed = conf.get_num("leveldb.compaction_speed");
@@ -69,6 +70,15 @@ SSDB* SSDB::open(const Config &conf, const std::string &base_dir){
 	if(block_size <= 0){
 		block_size = 4;
 	}
+	if(max_open_files <= 0){
+		max_open_files = cache_size / 1024 * 30;
+		if(max_open_files < 100){
+			max_open_files = 100;
+		}
+		if(max_open_files > 1000){
+			max_open_files = 1000;
+		}
+	}
 
 	log_info("main_db          : %s", main_db_path.c_str());
 	log_info("meta_db          : %s", meta_db_path.c_str());
@@ -76,12 +86,14 @@ SSDB* SSDB::open(const Config &conf, const std::string &base_dir){
 	log_info("block_size       : %d KB", block_size);
 	log_info("write_buffer     : %d MB", write_buffer_size);
 	log_info("compaction_speed : %d MB/s", compaction_speed);
+	log_info("sync_speed       : %d MB/s", sync_speed);
 	log_info("compression      : %s", compression.c_str());
 	log_info("binlog           : %s", binlog_onoff.c_str());
-	log_info("sync_speed       : %d MB/s", sync_speed);
+	log_info("max_open_files   : %d", max_open_files);
 
 	SSDB *ssdb = new SSDB();
 	//
+	ssdb->options.max_open_files = max_open_files;
 	ssdb->options.create_if_missing = true;
 	ssdb->options.filter_policy = leveldb::NewBloomFilterPolicy(10);
 	ssdb->options.block_cache = leveldb::NewLRUCache(cache_size * 1048576);
